--- a/city-register/pom.xml
+++ b/city-register/pom.xml
@@ -22,5 +22,12 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>2.0.4</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 </project>
